assets/css/caffeine-theme.css
/* ... */
table thead {
    background-color: #aac6c2;
    color: #39424B;
    text-align: left
}
table tr {
    border-bottom: 1px solid #ddd
}
table td,
table th {
    padding: 12px 18px
}
table::-webkit-scrollbar {
    -webkit-appearance: none
}
table::-webkit-scrollbar:vertical {
    width: 12px
}
.blog-header,
.cover,
.cover .background-container {
    width: 100%;
    text-align: center
}
table::-webkit-scrollbar:horizontal {
    height: 12px
}
table::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, .5);
    border-radius: 10px;
    border: 2px solid #fff
}
table::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #fff
}
.cover {
    position: fixed;
    height: 100%;
    opacity: 0;
    z-index: 0;
    overflow: hidden;
    background: center center no-repeat #39424B;
    background-size: cover
}
.cover.expanded {
    opacity: 1;
    z-index: 15
}
.cover.expanded .blog-header {
    display: none
}
.cover .background-container {
    height: 100%;
    font-weight: 100;
    color: #f8f8f8;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);
    background-color: rgba(0, 0, 0, .5)
}
.nav-header a i,
.profile a img {
    box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23)
}
.blog-header {
    z-index: 3;
    position: absolute
}
.blog-header h1 {
    color: #F6F4E9;
    margin: 100px 0 10px;
    font-size: 2.75rem
}
.blog-header h1:hover {
    color: #7ca8a0
}
.profile {
    max-width: 620px
}
.profile p {
    margin: 0 32px;
    font-size: 14px
}
.profile a h1 {
    font-family: Raleway, sans-serif;
    font-size: 2rem;
    color: #F6F4E9;
    margin: 8px 0
}
.profile a h3 {
    margin: 8px 0 24px;
    color: #F6F4E9;
    font-size: 18px
}
.profile a img {
    width: 112px;
    border: 2px solid #282C34
}
.call-to-action-container {
    margin: 18px 0
}
.call-to-action-container .navigation .links li {
    display: inline-block;
    margin: 0 5px;
    border-radius: 20px;
    background: #282C34;
    color: #F6F4E9;
    border: 1px solid #F6F4E9
}
.call-to-action-container .navigation .links li:hover {
    border: 1px solid #282C34;
    background: #F6F4E9
}
.call-to-action-container .navigation .links li a {
    padding: 10px 20px;
    font-size: 14px;
    position: relative;
    display: block;
    color: #F6F4E9;
    border-radius: 20px;
    text-shadow: none;
    font-weight: 700
}
.navigation .links li a,
.tags-overlay.container {
    text-shadow: 2px 2px 10px #222F38, 2px 2px 10px #222F38
}
.call-to-action-container .navigation .links li a:hover {
    opacity: 1;
    color: #282C34
}
.call-to-action-container .navigation .links li:first-child {
    border: 1px solid #F6F4E9
}
.call-to-action-container .navigation .links li:first-child:hover {
    border: 1px solid #282C34
}
.navigation .links {
    margin: 0;
    list-style: none
}
.navigation .links li {
    display: inline-block;
    line-height: 16px;
    border-left: 1px solid #F6F4E9
}
.navigation .links li:first-child {
    border: none
}
.navigation .links li.hide {
    display: none
}
.navigation .links li a {
    display: block;
    float: none;
    padding: 8px 20px 8px 22px;
    font-size: 18px;
    color: #F6F4E9
}
.navigation .links li a:hover {
    color: #7ca8a0
}
.comments {
    padding: 32px 0 0
}
.nav-header {
    width: 100%;
    z-index: 10;
    padding-top: 10px
}
.nav-header a {
    z-index: 10;
    left: 20px
}
.nav-header a.right {
    float: right;
    left: auto;
    right: 20px
}
.nav-header a i {
    position: relative;
    font-size: 20px;
    color: #F6F4E9;
    background: #282C34;
    border: 2px solid #F6F4E9;
    border-radius: 50%;
    padding: 12px
}
.nav-header.nav-header-fixed,
.tags-overlay {
    position: fixed
}
.nav-header a i:hover {
    cursor: pointer
}
.nav-header a i.fa-close {
    font-size: 30px;
    box-shadow: none;
    background: initial;
    border: none
}
.nav-header a img {
    max-width: 45px;
    border: 2px solid #F6F4E9;
    box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23)
}
.nav-header a img.avatar,
.page .profile-image img {
    border: 2px solid #282C34
}
.nav-header.mobile {
    display: none
}
.tags-overlay {
    z-index: 1;
    display: block;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    opacity: 0;
    background: #222F38
}
.tags-overlay.show {
    opacity: .97;
    z-index: 5
}
.tags-overlay.container {
    font-weight: 100;
    text-align: center;
    color: #f8f8f8
}
.tags-overlay .tags-container h2 {
    color: #F6F4E9
}
.tags-overlay .tags-container .tags a {
    display: inline-block;
    padding: 8px 14px;
    margin: 5px;
    font-size: 12px;
    background-color: rgba(133, 113, 95, .7)
}
.tags-overlay .tags-container .tags a:hover {
    background-color: #85715f
}
.page .tag-header {
    position: absolute;
    z-index: 15;
    margin-top: -15px;
    text-align: center;
    width: 900px
}
.page .tag-header .tags {
    line-height: normal
}
.page .tag-header .tags a {
    padding: 8px 14px;
    font-size: 12px;
    background-color: #282C34
}
.page .profile-image {
    margin-top: -80px;
    position: absolute;
    text-align: center;
    width: 100%
}
.page .profile-image img {
    max-width: 150px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24)
}
.page-index,
.page-tag {
    max-width: 900px;
    margin: 0 auto
}
.page-about .material-cover {
    margin-bottom: -40px
}
.page-about #post-title {
    margin-top: 60px;
    margin-bottom: 0
}
.page-about .post-header .social li a {
    color: #7ca8a0;
    padding: 5px
}
.error-body h1,
.error-body h2 {
    color: #f8f8f8;
    text-shadow: 0 1px 1px rgba(0, 0, 0, .4)
}
/* ... */

